index.html arrows z-index fix

--- a/Resources/stylesheets/index.css
+++ b/Resources/stylesheets/index.css
@@ -350,7 +350,7 @@ html {
         -ms-flex-align: center;
             align-items: center;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
 }
 
 .arrow-box {
